# dissolve

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  MANIFEST.in  README.md  README.rst  TODO  disperse.conf  fix_test_paths.sh  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
dissolve/: __init__.py  __main__.py  ast_helpers.py  ast_utils.py  check.py  cli.py  collector.py  context_analyzer.py  decorators.py  extractor.py  import_utils.py  migrate.py  py.typed  remove.py  replacer.py  types.py
dissolve/tests/: __init__.py  test_replace_me_decorator.py
src/: ast_transformer.rs  checker.rs  dependency_collector.rs  lib.rs  migrate_ruff.rs  mypy_lsp.rs  pyright_lsp.rs  remover.rs  ruff_parser.rs  ruff_parser_improved.rs  ruff_remover.rs  scanner.rs  test_import_tracking.rs  test_setup.rs  test_utils.rs  ty_introspect.rs  type_introspection_context.rs  types.rs
src/core/: mod.rs  ruff_collector.rs  types.rs
src/tests/: common.rs  mod.rs  test_ast_edge_cases.rs  test_ast_edge_cases_advanced.rs  test_ast_edge_cases_extended.rs  test_ast_transformer.rs  test_attribute_deprecation.rs  test_bug_fixes.rs  test_check.rs  test_class_methods.rs  test_class_wrapper_deprecation.rs  test_collection_comprehensive.rs  test_collector.rs  test_coverage_improvements.rs  test_cross_module.rs  test_dependency_inheritance.rs  test_dulwich_scenario.rs  test_edge_cases.rs  test_file_refresh.rs  test_formatting_preservation.rs  test_interactive.rs  test_lazy_type_lookup.rs  test_magic_method_edge_cases.rs  test_magic_method_migration.rs  test_magic_methods_all.rs  test_migrate.rs  test_migration_issues.rs  test_mypy_edge_cases.rs  test_mypy_integration.rs  test_mypy_integration_comprehensive.rs  test_real_world_scenarios.rs  test_relative_import_issue.rs  test_remove.rs  test_replace_me_corner_cases.rs  test_ruff_parser.rs  test_ruff_replacements.rs  test_ty_introspect.rs  test_type_introspection_failure.rs
tests/: test_args_kwargs.py  test_ast_helpers.py  test_ast_utils.py  test_attribute_deprecation.py  test_check.py  test_class_methods.py  test_class_wrapper_deprecation.py  test_cli.py  test_complex_imports.py  test_comprehensive_replacements.py  test_decorator.py  test_decorator_dependencies.py  test_docstring_extension.py  test_edge_cases.py  test_formatting_edge_cases.py  test_formatting_preservation.py  test_import_management.py  test_local_variables.py  test_migrate.py  test_module_variables.py  test_multi_statement.py  test_remove.py
