[package]
name = "dissolve"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dissolve"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
glob = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"
regex = "1.11"
once_cell = "1.20"
pyo3 = { version = "0.25", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"
indexmap = "2.0"
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.8.6" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.8.6" }
ruff_python_codegen = { git = "https://github.com/astral-sh/ruff", tag = "0.8.6" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "0.8.6" }

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
ctor = "0.2"