[metadata]
name = dissolve
description = Automatically replace use of deprecated APIs
long_description = file:README.rst
version = attr:dissolve.__version__
author = Jelmer Vernooĳ
author_email = jelmer@jelmer.uk
license = Apachev2 or later
url = https://github.com/jelmer/dissolve/
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX

[options]
packages = find:
python_requires = >=3.9
tests_require = pytest

[options.entry_points]
dissolve = dissolve.__main__:main
